# neuron-from-scratch-vz

./: .gitignore  .pre-commit-config.yaml  Project_strucutre.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
data/: tiny_people.py
docs/: how-it-works.md  index.md  results.md
src/neuron_vz/: __init__.py  network.py
tests/: test_feedforward.py  test_full_coverage.py  test_smoke.py  test_training.py
