[project]
name = "neuron-from-scratch-vz"
version = "0.1.0"
description = "Faithful, tested reproduction of Victor Zhou’s from-scratch neural network (2–2–1, sigmoid, MSE, SGD)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Christian Mandujano Borjas", email = "C.Mandujano.Borjas@gmail.com" }]
keywords = ["neural-networks", "from-scratch", "victor-zhou", "education"]

dependencies = [
  "numpy>=1.26,<2.0",
  "matplotlib>=3.8",
  "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "pre-commit>=3.7",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]         # pycodestyle, pyflakes, isort, pyupgrade, bugbear
ignore = ["E203","E501"]                # keep formatter-friendly defaults

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
pretty = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
